--- a/boot/src/main/resources/application.properties
+++ b/boot/src/main/resources/application.properties
@@ -2,4 +2,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/userdb?serverTimezone=Europe/Minsk&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=!25koSmoS12
+spring.mvc.hiddenmethod.filter.enabled=true
+
 
